--- a/content/green.css
+++ b/content/green.css
@@ -6,13 +6,14 @@
     color: #58C395;
     font-size: 14px;
     width: 200px;
+    position: relative;
 }
 
 .ma-select-box {
     border: 1px solid #58C395;
     height: 35px;
     width: 100%;
-    border-radius: 3px;
+    border-radius: 5px;
     box-sizing: border-box;
 }
 
@@ -20,16 +21,17 @@
 .ma-select-box-filter {
     width: 100%;
     height: 100%;
-    background-image: url('images/green-select-arrow.png');
+    background-image: url('images/custom-select-arrow.png');
     background-repeat: no-repeat;
     background-position-x: 90%;
     background-position-y: 50%;
     border: none;
+    border-radius: 5px;
     padding-right: 15%;
-    cursor:default;
-    outline:none;
-    color:#58C395;
-    box-sizing:border-box;
+    cursor: default;
+    outline: none;
+    color: #58C395;
+    text-align: center;
 }
 
     .ma-select-box-filter:focus {
@@ -44,12 +46,14 @@
 .ma-select-options {
     width: 100%;
     border: 1px solid #58C395;
-    border-radius: 3px;
+    border-radius: 5px;
     box-sizing: border-box;
     display: none;
     max-height: 500px;
     overflow: auto;
-    position:relative;
+    position: absolute;
+    background-color: white;
+    z-index: 999;
 }
 
 .ma-select-ul {
@@ -65,6 +69,16 @@
 }
 
     .ma-select-li:hover {
+        background-color: #58C395;
+        color: white;
+    }
+
+.ma-select-li-label {
+    text-align: center;
+    color: lightgray;
+}
+
+    .ma-select-li-label:hover {
         background-color: #58C395;
         color: white;
     }
